# lpb

./: .env  .gitignore  Cargo.toml  Dockerfile  build.rs
prisma/: schema.prisma
prisma/migrations/20231205083243_init/: migration.sql
prisma/migrations/20240127064148_init/: migration.sql
src/: error.rs  main.rs  routes.rs  utils.rs
src/handlers/: mod.rs  paste.rs  web.rs
web/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
web/src/: main.tsx  router.ts
web/src/assets/styles/: global.scss
web/src/mdx/: cli-usage.mdx
web/src/pages/: [id].module.scss  [id].tsx  _app.tsx  index.tsx
web/src/utils/: languages.ts
