[package]
name = "lpb"
version = "0.1.0"
edition = "2021"
default-run = "lpb"

[dependencies]
tokio = { version = "1.34.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", default-features = false, features = [
  'sqlite',
] }
prisma-client-rust-cli = { git = "https://github.com/brendonovich/prisma-client-rust", tag = "0.6.10", default-features = false, features = [
  'sqlite',
] }
serde = { version = "1.0.193", features = ["derive"] }
axum = { version = "0.7.2", features = ["multipart"] }
serde_json = "1.0.108"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
dotenv = "0.15.0"
anyhow = "1.0.75"
rust-embed = "8.1.0"
mime_guess = "2.0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
